--- a/environment.yml
+++ b/environment.yml
@@ -44,6 +44,7 @@ dependencies:
   - ipykernel=6.29.5=pyh57ce528_0
   - ipython=8.29.0=pyh707e725_0
   - jedi=0.19.1=pyhd8ed1ab_0
+  - joblib=1.4.2=pyhd8ed1ab_0
   - jupyter_client=8.6.3=pyhd8ed1ab_0
   - jupyter_core=5.7.2=pyh31011fe_1
   - kiwisolver=1.4.7=py312h6142ec9_0
@@ -132,12 +133,16 @@ dependencies:
   - qhull=2020.2=h420ef59_5
   - re2=2024.07.02=hcd0e937_1
   - readline=8.2=h92ec313_1
+  - scikit-learn=1.5.2=py312h387f99c_1
   - scipy=1.14.1=py312h20deb59_1
+  - seaborn=0.13.2=hd8ed1ab_2
+  - seaborn-base=0.13.2=pyhd8ed1ab_2
   - setuptools=75.3.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.2.1=hd02b534_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - statsmodels=0.14.4=py312h755e627_0
+  - threadpoolctl=3.5.0=pyhc1e730c_0
   - tk=8.6.13=h5083fa2_1
   - tornado=6.4.1=py312h024a12e_1
   - traitlets=5.14.3=pyhd8ed1ab_0
@@ -154,4 +159,4 @@ dependencies:
   - zstd=1.5.6=hb46c0d2_0
   - pip:
       - holidays==0.62
-prefix: # ADD TO YOUR CONDA
+prefix: # TO CONDA ENV
